--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 .env
 .venv
 kalshi_private_key.pem
-/server/data
+/server/data/google_news
+/server/data/kalshi
+/server/data/tmdb
+/server/data/trends
+/server/data/wikipedia
+/server/data/youtube
